--- a/index.html
+++ b/index.html
@@ -2,39 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DreamOrbit | AI Space Tours</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>DreamOrbit | SpaceTech Landing</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Animated Background -->
-  <div class="space-bg">
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-
-  <header>
-    <nav>
-      <h2>🚀 DreamOrbit</h2>
-    </nav>
-  </header>
-
   <main class="hero">
-    <h1 class="glitch-text">AI Space Tours</h1>
-    <p>Emotional. Intelligent. Interstellar.</p>
-    <a href="#" class="btn">Book Your Orbit</a>
+    <h1 class="animated-text">DreamOrbit: AI-Powered Space Exploration</h1>
+    <p>Launching the future, one algorithm at a time.</p>
   </main>
 
-  <footer>
-    <p>🌌 Launching Soon – Stay Tuned | © 2025 DreamOrbit</p>
-  </footer>
+  <section class="landing-scene">
+    <div class="rocket">
+      <div class="body"></div>
+      <div class="window"></div>
+      <div class="flame"></div>
+    </div>
+    <div class="dust"></div>
+  </section>
 </body>
 </html>
