--- a/index.html
+++ b/index.html
@@ -1,24 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DreamOrbit | SpaceTech Landing</title>
+  <meta charset="UTF-8">
+  <title>AstroNex - Journey Beyond</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <main class="hero">
-    <h1 class="animated-text">DreamOrbit: AI-Powered Space Exploration</h1>
-    <p>Launching the future, one algorithm at a time.</p>
-  </main>
-
-  <section class="landing-scene">
-    <div class="rocket">
-      <div class="body"></div>
-      <div class="window"></div>
-      <div class="flame"></div>
-    </div>
-    <div class="dust"></div>
-  </section>
+  <h1>Welcome to AstroNex</h1>
+  <p>Launching the future—Explore the stars, embrace the tech. AstroNex, your gateway to space innovation and discovery.</p>
 </body>
 </html>
