--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AstroNex - Journey Beyond</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>DreamOrbit - Journey Beyond</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to AstroNex</h1>
-  <p>Launching the future—Explore the stars, embrace the tech. AstroNex, your gateway to space innovation and discovery.</p>
+  <div class="overlay">
+    <h1>Welcome to AstroNex</h1>
+    <p>Launching the future—Explore the stars, embrace the tech.<br>
+      AstroNex, your gateway to space innovation and discovery.</p>
+  </div>
 </body>
 </html>
