--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>DreamOrbit - Journey Beyond</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AstroNex</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="overlay">
-    <h1>Welcome to AstroNex</h1>
+  <div class="stars"></div>
+
+  <div class="landing-container">
+    <h1>Welcome to <span class="astro">AstroNex</span></h1>
     <p>Launching the future—Explore the stars, embrace the tech.<br>
-      AstroNex, your gateway to space innovation and discovery.</p>
+    AstroNex, your gateway to space innovation and discovery.</p>
   </div>
+
+  <!-- Space landing spaceship GIF -->
+  <img src="https://media.giphy.com/media/MF1gS3yS2zr8tUZ5dj/giphy.gif" class="ship" alt="Landing Spaceship" />
 </body>
 </html>
