--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       left: 0;
       height: 100%;
       width: 100%;
-      background: url("fc833dea-2966-453f-a0c8-9160a8d33a94.png") no-repeat center center;
+      background: url("https://hips.hearstapps.com/hmg-prod/images/digitally-created-3-dimensional-starry-sky-with-royalty-free-image-1744992067.pjpeg?crop=1xw:1xh;center,top&resize=1200:*") no-repeat center center;
       background-size: cover;
       animation: rotate 60s linear infinite;
       z-index: -1;
