--- a/index.html
+++ b/index.html
@@ -2,99 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AstroNex</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body, html {
-      height: 100%;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      overflow: hidden;
-      background-color: black;
-      color: white;
-    }
-
-    .background {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      z-index: -1;
-    }
-
-    .space-object {
-      position: absolute;
-      width: 150px;
-      height: 150px;
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-      animation: rotate 40s linear infinite;
-      opacity: 0.6;
-    }
-
-    .black-hole {
-      background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Black_hole_-_Messier_87_crop_max_res.jpg/600px-Black_hole_-_Messier_87_crop_max_res.jpg');
-      top: 20%;
-      left: 10%;
-    }
-
-    .galaxy {
-      background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/NGC_4414_%28NASA-med%29.jpg/600px-NGC_4414_%28NASA-med%29.jpg');
-      top: 60%;
-      right: 10%;
-    }
-
-    @keyframes rotate {
-      0% {
-        transform: rotate(0deg) scale(1);
-      }
-      50% {
-        transform: rotate(180deg) scale(1.1);
-      }
-      100% {
-        transform: rotate(360deg) scale(1);
-      }
-    }
-
-    .center-content {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 0 30px cyan;
-    }
-
-    .center-content h1 {
-      font-size: 48px;
-      color: cyan;
-      margin-bottom: 10px;
-    }
-
-    .center-content p {
-      font-size: 18px;
-      color: lightgray;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>DreamOrbit</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="background">
-    <div class="space-object black-hole"></div>
-    <div class="space-object galaxy"></div>
+  <div class="space-bg">
+    <div class="stars"></div>
+    <div class="black-hole"></div>
+    <div class="galaxy"></div>
+    <div class="comet"></div>
   </div>
 
-  <div class="center-content">
+  <div class="container">
     <h1>Welcome to DreamOrbit</h1>
-    <p>Launching the future—Explore the stars, embrace the tech.<br />DreamOrbit, your gateway to space innovation and discovery.</p>
+    <p>Launching the future—Explore the stars, embrace the tech.<br />
+    DreamOrbit, your gateway to space innovation and discovery.</p>
   </div>
+
+  <!-- 🎵 Optional Space Music -->
+  <audio autoplay loop>
+    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-10.mp3" type="audio/mpeg" />
+    Your browser does not support the audio element.
+  </audio>
 </body>
 </html>
