--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>DreamOrbit</title>
   <style>
-    /* Reset and body styling */
     * {
       margin: 0;
       padding: 0;
@@ -13,42 +12,58 @@
 
     body {
       height: 100vh;
-      background: black;
+      background: radial-gradient(ellipse at center, #000010 0%, #000000 100%);
       overflow: hidden;
       font-family: 'Segoe UI', sans-serif;
-      color: #fff;
+      color: white;
       display: flex;
       justify-content: center;
       align-items: center;
       position: relative;
     }
 
-    /* Rotating galaxy and black hole */
-    .galaxy, .blackhole {
+    /* Twinkling stars background */
+    .stars {
       position: absolute;
-      border-radius: 50%;
-      animation: spin 80s linear infinite;
+      width: 200%;
+      height: 200%;
+      background: transparent url('https://i.ibb.co/hM4F9hK/stars.png') repeat;
+      animation: moveStars 100s linear infinite;
       z-index: 0;
     }
 
-    .galaxy {
-      width: 1000px;
-      height: 1000px;
-      background: radial-gradient(#0ff3, #0000 60%), repeating-conic-gradient(#0ff2 0deg 10deg, transparent 10deg 20deg);
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+    @keyframes moveStars {
+      from { transform: translate(0, 0); }
+      to { transform: translate(-500px, -500px); }
     }
 
-    .blackhole {
-      width: 200px;
-      height: 200px;
-      background: radial-gradient(circle at center, #000 20%, #222 70%, #000 100%);
+    /* Rotating Galaxy */
+    .galaxy {
+      position: absolute;
+      width: 1000px;
+      height: 1000px;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      animation: spin 15s linear infinite reverse;
-      box-shadow: 0 0 40px 10px rgba(0, 255, 255, 0.3);
+      background: repeating-conic-gradient(rgba(0,255,255,0.07) 0deg 10deg, transparent 10deg 20deg);
+      border-radius: 50%;
+      animation: spin 120s linear infinite;
+      z-index: 1;
+    }
+
+    /* Black Hole Core */
+    .blackhole {
+      position: absolute;
+      width: 200px;
+      height: 200px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: radial-gradient(circle at center, #000 30%, #111 70%, #000 100%);
+      border-radius: 50%;
+      animation: swirl 20s linear infinite reverse;
+      box-shadow: 0 0 60px 20px rgba(0, 255, 255, 0.2);
+      z-index: 2;
     }
 
     @keyframes spin {
@@ -56,14 +71,19 @@
       100% { transform: translate(-50%, -50%) rotate(360deg); }
     }
 
-    /* Main Welcome Box */
+    @keyframes swirl {
+      0% { transform: translate(-50%, -50%) rotate(0deg) scale(1); }
+      100% { transform: translate(-50%, -50%) rotate(-360deg) scale(1.05); }
+    }
+
+    /* Welcome box content */
     .welcome-box {
-      z-index: 2;
+      z-index: 3;
       background: rgba(0, 0, 0, 0.85);
       border-radius: 20px;
       padding: 40px 60px;
       text-align: center;
-      box-shadow: 0 0 30px #0ff, 0 0 50px #0ff2;
+      box-shadow: 0 0 40px #0ff, 0 0 60px #0ff2;
       max-width: 700px;
     }
 
@@ -95,15 +115,24 @@
   </style>
 </head>
 <body>
+
+  <!-- Twinkling Star Background -->
+  <div class="stars"></div>
+
+  <!-- Rotating Galaxy Disc -->
   <div class="galaxy"></div>
+
+  <!-- Black Hole Core -->
   <div class="blackhole"></div>
 
+  <!-- Foreground Welcome Text -->
   <div class="welcome-box">
     <h1>Welcome to DreamOrbit</h1>
     <p>
-      Launching the future—Explore the stars, embrace the tech.<br>
-      DreamOrbit, your gateway to space innovation and discovery.
+      Launch into the cosmos—Explore the stars, unlock innovation.<br>
+      DreamOrbit is your gateway to space-tech exploration.
     </p>
   </div>
+
 </body>
 </html>
