--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       position: absolute;
       width: 300%;
       height: 300%;
-      background: url('https://media.giphy.com/media/3o7abB06u9bNzA8lu8/giphy.gif') repeat;
+      background: url('https://i.giphy.com/3o7abB06u9bNzA8lu8.webp') repeat;
       background-size: cover;
       animation: moveStars 200s linear infinite;
       z-index: 0;
