--- a/index.html
+++ b/index.html
@@ -7,24 +7,13 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="universe">
-    <nav class="navbar">
-      <div class="logo">🚀 DreamOrbit</div>
-      <ul class="nav-links">
-        <li>🏠 Home</li>
-        <li>👤 Login</li>
-        <li>📖 About</li>
-      </ul>
-    </nav>
-
-    <div class="hero">
-      <h1 class="headline">Launch Beyond the Stars</h1>
-      <p>Your gateway to interstellar exploration begins here.</p>
+  <main class="hero">
+    <div class="content">
+      <h1 class="headline">DreamOrbit</h1>
+      <p class="subtext">Where Sleep Meets Space – Explore Dreams Beyond Reality.</p>
+      <a href="#" class="cta">Book Your Dream Voyage</a>
     </div>
-
     <div class="stars"></div>
-    <div class="planet"></div>
-    <div class="black-hole"></div>
-  </div>
+  </main>
 </body>
 </html>
